--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@types/chart.js": "^2.9.41",
+    "chart.js": "^4.4.3",
     "marked": "^4.2.12",
     "ngx-markdown": "^15.1.2",
     "prismjs": "^1.29.0",
@@ -29,6 +31,7 @@
     "@angular-devkit/build-angular": "^15.2.4",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
+    "@angular/localize": "^15.2.2",
     "@types/jasmine": "~4.3.0",
     "@types/marked": "^4.0.8",
     "jasmine-core": "~4.5.0",
